src/include/structs.h

typedef uint8_t u8;
typedef uint32_t u32;
typedef uint64_t u64;
typedef int64_t s64;
/* ========================================================================= *
 * Process and Container State                                               *
 * ========================================================================= */

// TODO: use this wherever we have a policy id or a container id
typedef u64 policy_id_t;
typedef u64 container_id_t;
// Represents the state of a container
typedef struct {
    // id of bpfcontain policy associated with this container
    policy_id_t policy_id;
    // bpfcontain's version of a container id,
    // also used as a key into the map of containers
    container_id_t container_id;
    // the mount namespace id of this container
    u32 mnt_ns_id;
    // the pid namespace id of this container
    u32 pid_ns_id;
    // reference count of the container (how many tasks are running inside it)
    // this should only be incremented and decremented atomically
    u32 refcount;
    // Is the container in a tainted state?
    u8 tainted;
    // often corresponds with container id on the docker side
    char uts_name[16];
} container_t;
/* ========================================================================= *
 * Keys for BPF Maps                                                         *
 * ========================================================================= */

typedef struct {
    u64 policy_id;
    u32 device_id;
} __attribute__((__packed__)) fs_policy_key_t;
typedef struct {
    u64 policy_id;
    u64 inode_id;
    u32 device_id;
} __attribute__((__packed__)) file_policy_key_t;
typedef struct {
    u64 policy_id;
    u32 major;
    s64 minor;
} __attribute__((__packed__)) dev_policy_key_t;
typedef struct {
    u64 policy_id;
    u64 inode_id;
    u32 device_id;
} __attribute__((__packed__)) subdir_policy_key_t;
typedef struct {
    u64 policy_id;
} __attribute__((__packed__)) cap_policy_key_t;
typedef struct {
    u64 policy_id;
} __attribute__((__packed__)) net_policy_key_t;
typedef struct {
    u64 policy_id;
    u64 other_policy_id;
} __attribute__((__packed__)) ipc_policy_key_t;
typedef struct {
    u64 inode_id;
    u32 device_id;
} __attribute__((__packed__)) inode_key_t;