src/bindings/generated/generated.rs

#[test]
fn bindgen_test_layout_container_t() {
    assert_eq!(
        ::std::mem::size_of::<container_t>(),
        48usize,
        concat!("Size of: ", stringify!(container_t))
    );
    assert_eq!(
        ::std::mem::align_of::<container_t>(),
        8usize,
        concat!("Alignment of ", stringify!(container_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<container_t>())).policy_id as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(container_t),
            "::",
            stringify!(policy_id)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<container_t>())).container_id as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(container_t),
            "::",
            stringify!(container_id)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<container_t>())).mnt_ns_id as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(container_t),
            "::",
            stringify!(mnt_ns_id)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<container_t>())).pid_ns_id as *const _ as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(container_t),
            "::",
            stringify!(pid_ns_id)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<container_t>())).refcount as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(container_t),
            "::",
            stringify!(refcount)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<container_t>())).tainted as *const _ as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(container_t),
            "::",
            stringify!(tainted)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<container_t>())).uts_name as *const _ as usize },
        29usize,
        concat!(
            "Offset of field: ",
            stringify!(container_t),
            "::",
            stringify!(uts_name)
        )
    );
}
#[repr(C, packed)]
#[derive(Debug, Default, Copy, Clone, PartialEq, Eq)]
pub struct fs_policy_key_t {
    pub policy_id: u64_,
    pub device_id: u32_,
}
#[test]
fn bindgen_test_layout_fs_policy_key_t() {
    assert_eq!(
        ::std::mem::size_of::<fs_policy_key_t>(),
        12usize,
        concat!("Size of: ", stringify!(fs_policy_key_t))
    );
    assert_eq!(
        ::std::mem::align_of::<fs_policy_key_t>(),
        1usize,
        concat!("Alignment of ", stringify!(fs_policy_key_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<fs_policy_key_t>())).policy_id as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(fs_policy_key_t),
            "::",
            stringify!(policy_id)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<fs_policy_key_t>())).device_id as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(fs_policy_key_t),
            "::",
            stringify!(device_id)
        )
    );
}
#[repr(C, packed)]
#[derive(Debug, Default, Copy, Clone, PartialEq, Eq)]
pub struct file_policy_key_t {
    pub policy_id: u64_,
    pub inode_id: u64_,
    pub device_id: u32_,
}
#[test]
fn bindgen_test_layout_file_policy_key_t() {
    assert_eq!(
        ::std::mem::size_of::<file_policy_key_t>(),
        20usize,
        concat!("Size of: ", stringify!(file_policy_key_t))
    );
    assert_eq!(
        ::std::mem::align_of::<file_policy_key_t>(),
        1usize,
        concat!("Alignment of ", stringify!(file_policy_key_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<file_policy_key_t>())).policy_id as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(file_policy_key_t),
            "::",
            stringify!(policy_id)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<file_policy_key_t>())).inode_id as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(file_policy_key_t),
            "::",
            stringify!(inode_id)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<file_policy_key_t>())).device_id as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(file_policy_key_t),
            "::",
            stringify!(device_id)
        )
    );
}
pub const MINOR_WILDCARD: s64 = -1;
#[repr(C, packed)]
#[derive(Debug, Default, Copy, Clone, PartialEq, Eq)]
pub struct dev_policy_key_t {
    pub policy_id: u64_,
    pub major: u32_,
    pub minor: s64,
}
#[test]
fn bindgen_test_layout_dev_policy_key_t() {
    assert_eq!(
        ::std::mem::size_of::<dev_policy_key_t>(),
        20usize,
        concat!("Size of: ", stringify!(dev_policy_key_t))
    );
    assert_eq!(
        ::std::mem::align_of::<dev_policy_key_t>(),
        1usize,
        concat!("Alignment of ", stringify!(dev_policy_key_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<dev_policy_key_t>())).policy_id as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(dev_policy_key_t),
            "::",
            stringify!(policy_id)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<dev_policy_key_t>())).major as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(dev_policy_key_t),
            "::",
            stringify!(major)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<dev_policy_key_t>())).minor as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(dev_policy_key_t),
            "::",
            stringify!(minor)
        )
    );
}
#[repr(C, packed)]
#[derive(Debug, Default, Copy, Clone, PartialEq, Eq)]
pub struct subdir_policy_key_t {
    pub policy_id: u64_,
    pub inode_id: u64_,
    pub device_id: u32_,
}
#[test]
fn bindgen_test_layout_subdir_policy_key_t() {
    assert_eq!(
        ::std::mem::size_of::<subdir_policy_key_t>(),
        20usize,
        concat!("Size of: ", stringify!(subdir_policy_key_t))
    );
    assert_eq!(
        ::std::mem::align_of::<subdir_policy_key_t>(),
        1usize,
        concat!("Alignment of ", stringify!(subdir_policy_key_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<subdir_policy_key_t>())).policy_id as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(subdir_policy_key_t),
            "::",
            stringify!(policy_id)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<subdir_policy_key_t>())).inode_id as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(subdir_policy_key_t),
            "::",
            stringify!(inode_id)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<subdir_policy_key_t>())).device_id as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(subdir_policy_key_t),
            "::",
            stringify!(device_id)
        )
    );
}
#[repr(C, packed)]
#[derive(Debug, Default, Copy, Clone, PartialEq, Eq)]
pub struct cap_policy_key_t {
    pub policy_id: u64_,
}
#[test]
fn bindgen_test_layout_cap_policy_key_t() {
    assert_eq!(
        ::std::mem::size_of::<cap_policy_key_t>(),
        8usize,
        concat!("Size of: ", stringify!(cap_policy_key_t))
    );
    assert_eq!(
        ::std::mem::align_of::<cap_policy_key_t>(),
        1usize,
        concat!("Alignment of ", stringify!(cap_policy_key_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<cap_policy_key_t>())).policy_id as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cap_policy_key_t),
            "::",
            stringify!(policy_id)
        )
    );
}
#[repr(C, packed)]
#[derive(Debug, Default, Copy, Clone, PartialEq, Eq)]
pub struct net_policy_key_t {
    pub policy_id: u64_,
}
#[test]
fn bindgen_test_layout_net_policy_key_t() {
    assert_eq!(
        ::std::mem::size_of::<net_policy_key_t>(),
        8usize,
        concat!("Size of: ", stringify!(net_policy_key_t))
    );
    assert_eq!(
        ::std::mem::align_of::<net_policy_key_t>(),
        1usize,
        concat!("Alignment of ", stringify!(net_policy_key_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<net_policy_key_t>())).policy_id as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(net_policy_key_t),
            "::",
            stringify!(policy_id)
        )
    );
}
#[repr(C, packed)]
#[derive(Debug, Default, Copy, Clone, PartialEq, Eq)]
pub struct ipc_policy_key_t {
    pub policy_id: u64_,
    pub other_policy_id: u64_,
}
#[test]
fn bindgen_test_layout_ipc_policy_key_t() {
    assert_eq!(
        ::std::mem::size_of::<ipc_policy_key_t>(),
        16usize,
        concat!("Size of: ", stringify!(ipc_policy_key_t))
    );
    assert_eq!(
        ::std::mem::align_of::<ipc_policy_key_t>(),
        1usize,
        concat!("Alignment of ", stringify!(ipc_policy_key_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ipc_policy_key_t>())).policy_id as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ipc_policy_key_t),
            "::",
            stringify!(policy_id)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<ipc_policy_key_t>())).other_policy_id as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ipc_policy_key_t),
            "::",
            stringify!(other_policy_id)
        )
    );
}
#[repr(C, packed)]
#[derive(Debug, Default, Copy, Clone, PartialEq, Eq)]
pub struct inode_key_t {
    pub inode_id: u64_,
    pub device_id: u32_,
}
#[test]
fn bindgen_test_layout_inode_key_t() {
    assert_eq!(
        ::std::mem::size_of::<inode_key_t>(),
        12usize,
        concat!("Size of: ", stringify!(inode_key_t))
    );
    assert_eq!(
        ::std::mem::align_of::<inode_key_t>(),
        1usize,
        concat!("Alignment of ", stringify!(inode_key_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<inode_key_t>())).inode_id as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(inode_key_t),
            "::",
            stringify!(inode_id)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<inode_key_t>())).device_id as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(inode_key_t),
            "::",
            stringify!(device_id)
        )
    );
}
extern "C" {
    pub fn containerize(policy_id: ::std::os::raw::c_ulong) -> ::std::os::raw::c_int;
}
